[package]
name = "tuie-demo"
version = "0.1.0"
edition = "2021"
description = "Interactive demo program showcasing the tuie widget toolkit."
license = "MIT"
repository = "https://github.com/jake-stewart/tuie-demo"
readme = "readme.md"
keywords = ["tui", "gui", "terminal", "widget", "tuie"]
categories = ["command-line-interface", "gui"]

[features]
gui = ["tuie/gui"]

[dependencies]
tuie = { version = "0.1.0", features = ["harmonious", "images"] }
axis2d = "0.1.0"
chord_macro = "0.1.0"
futures = "0.3"

[dev-dependencies]
tuie = { version = "0.1.0", features = ["harmonious", "images"] }
